--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Custom
+.vscode/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -14,6 +17,8 @@ dist/
 downloads/
 eggs/
 .eggs/
+Include/
+Scripts/
 lib/
 lib64/
 parts/
@@ -127,6 +132,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+pyvenv.cfg
 
 # Spyder project settings
 .spyderproject
